Mon Sep 29 18:10:39 BST 2003 (njh)
----------------------------------
  * libclamav: moved stub from heap to stack since its mazimum size is known

Mon Sep 29 13:59:13 BST 2003 (njh)
---------------------------------
  * libclamav:	Handle Content-Type: /; name="eicar.com"

Mon Sep 29 13:42:51 CEST 2003 (tk)
----------------------------------
  * libclamav: initial support for cvd file format (a database container file
	       with support for digital signatures)
  * libclamav: fixed zip recursion problem introduced in -20030907 (bug
	       reported by Tomasz Papszun)
  * libclamav: support for gzip and Maildir files was enabled if ScanMail _or_
	       ScanArchive was defined. Fixed.
  * libclamav: zziplib updated to 0.12.83 (probably not the newest one but
	       seems to be very stable)
  * sigtool: --build (builds a cvd file, not finished yet)
  * clamd: new directive TCPAddr by Bernard Quatermass
  * libclamav: new scan option CL_DISABLERAR (disables built-in rar unpacker)
  * clamd: rar scanning is now disabled by default and may be enabled with
	   ScanRAR in clamav.conf.

Mon Sep 29 07:15:30 BST 2003 (njh)
----------------------------------
  * clamav-milter: ensure remoteIP is initialised
  		max-children now overrides MaxThreads

Sun Sep 28 17:38:44 BST 2003 (njh)
----------------------------------
  * clamav-milter: added --force-scan flag
  		Use MaxThreads if --max-children not set
		(thanks to "Richard G. Roberto" <rgr@dedlegend.com>)

Sun Sep 28 11:07:49 BST 2003 (njh)
----------------------------------
  * libclamav: mbox.c now compiles on SCO5
  *		removed some duplicate code between mbox.c and message.c
  *		started to add RCS ident info

Fri Sep 26 17:08:31 BST 2003 (njh)
----------------------------------
  * clamav-milter: added --noxheader patch

Wed Sep 24 18:35:29 CEST 2003 (tk)
----------------------------------
  * libclamav: disabled support for news messages

Wed Sep 24 10:37:10 BST 2003 (njh)
----------------------------------
